<resources>
    <string name="app_name">Notes</string>
    
    <!-- Auth -->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address_line1">Address Line 1</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal Code</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    
    <!-- Notes -->
    <string name="notes">Notes</string>
    <string name="new_note">New Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="note_title">Title</string>
    <string name="note_content">Content</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="sync">Sync</string>
    <string name="add_note">Add Note</string>
    <string name="no_notes">No notes yet. Create your first note!</string>
    
    <!-- Labels -->
    <string name="labels">Labels</string>
    <string name="add_label">Add Label</string>
    
    <!-- Menu -->
    <string name="action_search">Search</string>
    <string name="action_sync">Sync</string>
    <string name="action_logout">Logout</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
</resources>
