<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    
    <item
        android:id="@+id/action_sync"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/sync"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_manage_labels"
        android:title="Manage Labels"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
    
</menu>
